# open-svpflow

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: nightly-release.yml
crates/svpflow-core/: Cargo.toml
crates/svpflow-core/src/: frame_math.rs  lib.rs  metadata.rs  params.rs  renderer.rs
crates/svpflow-wasm/: Cargo.toml  webgpu.js
crates/svpflow-wasm/src/: lib.rs
crates/svpflow1/: Cargo.toml  build.rs  svpflow1_vs.def
crates/svpflow1/src/: abi.rs  analyse_filter.rs  analyse_opts.rs  analyse_search.rs  lib.rs  portable.rs  super_build.rs  super_filter.rs  super_opts.rs  vs.rs
crates/svpflow2/: Cargo.toml  build.rs  svpflow2_vs.def
crates/svpflow2/src/: abi.rs  core.rs  filter.rs  frame.rs  gpu.rs  hdr.rs  lib.rs  light.rs  metadata.rs  nvof.rs  options.rs  strings.rs  video_format.rs  vs.rs
scripts/: build-wasm.ps1  build-wasm.sh
